# plox

./: .gitignore  environment.py  expr.py  interpreter.py  lox.py  mypy.ini  parser.py  print_ast.py  readme.md  resolver.py  scanner.py  setup.cfg  stmt.py  tokens.py
examples/: classes.lox  closures.lox  fibonacci.lox  functions.lox  lexical_scope.lox
plox/: __main__.py  environment.py  expr.py  interpreter.py  lox.py  parser.py  resolver.py  scanner.py  stmt.py  tokens.py
