[metadata]
name = plox
version = 1.0.0
author = Ariel Don
author_email = ariel@arieldon.com
description = A tree-walk interpreter for Lox from Robert Nystrom's Crafting Interpreters.

[options]
packages = plox
python_requires = >=3.10

[mypy]
files = plox/*.py
strict = True
strict_optional = False
pretty = True
color_output = False
